--- a/package.json
+++ b/package.json
@@ -1,27 +1,45 @@
 {
-  "name": "cs554-yams",
-  "version": "1.0.0",
-  "description": "YAMS: Yet Another Messaging Service",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gluaxspeed/cs554-yams.git"
-  },
-  "keywords": [
-    "proton-native",
-    "react",
-    "redux",
-    "typescript",
-    "sockets",
-    "aws-s3"
-  ],
-  "author": "Rob Herley, Jonathan Pavlik, Albert Tang, Aimal Wajihuddin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gluaxspeed/cs554-yams/issues"
-  },
-  "homepage": "https://github.com/gluaxspeed/cs554-yams#readme"
+   "name": "cs554-yams",
+   "version": "1.0.0",
+   "description": "YAMS: Yet Another Messaging Service",
+   "main": "index.js",
+   "scripts": {
+      "dev":
+         "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,yellow.bold\" \"npm run ts:watch\" \"npm run node:dev\"",
+      "node:dev": "nodemon dist/",
+      "node:dist": "node dist/",
+      "ts:build": "tsc",
+      "ts:watch": "tsc -w"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/gluaxspeed/cs554-yams.git"
+   },
+   "keywords": [
+      "proton-native",
+      "react",
+      "redux",
+      "typescript",
+      "sockets",
+      "aws-s3"
+   ],
+   "author": "Rob Herley, Jonathan Pavlik, Albert Tang, Aimal Wajihuddin",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/gluaxspeed/cs554-yams/issues"
+   },
+   "homepage": "https://github.com/gluaxspeed/cs554-yams#readme",
+   "devDependencies": {
+      "@types/cors": "^2.8.3",
+      "@types/express": "^4.11.1",
+      "@types/morgan": "^1.7.35",
+      "@types/node": "^9.6.2",
+      "concurrently": "^3.5.1",
+      "typescript": "^2.8.1"
+   },
+   "dependencies": {
+      "cors": "^2.8.4",
+      "express": "^4.16.3",
+      "morgan": "^1.9.0"
+   }
 }
