--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
    "description": "YAMS: Yet Another Messaging Service",
    "main": "index.js",
    "scripts": {
-      "dev":
-         "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,yellow.bold\" \"npm run ts:watch\" \"npm run node:dev\"",
+      "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,yellow.bold\" \"npm run ts:watch\" \"npm run node:dev\"",
       "node:dev": "nodemon dist/",
       "node:dist": "node dist/",
       "ts:build": "tsc",
@@ -30,16 +29,21 @@
    },
    "homepage": "https://github.com/gluaxspeed/cs554-yams#readme",
    "devDependencies": {
+      "@types/bcrypt": "^1.0.0",
       "@types/cors": "^2.8.3",
       "@types/express": "^4.11.1",
       "@types/morgan": "^1.7.35",
       "@types/node": "^9.6.2",
+      "@types/passport-local": "^1.0.33",
+      "@types/uuid": "^3.4.3",
       "concurrently": "^3.5.1",
       "typescript": "^2.8.1"
    },
    "dependencies": {
       "cors": "^2.8.4",
       "express": "^4.16.3",
-      "morgan": "^1.9.0"
+      "mongoose": "^5.0.13",
+      "morgan": "^1.9.0",
+      "passport-local": "^1.0.0"
    }
 }
