--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "@types/bcrypt": "^1.0.0",
       "@types/cors": "^2.8.3",
       "@types/express": "^4.11.1",
+      "@types/mongoose": "^5.0.9",
       "@types/morgan": "^1.7.35",
       "@types/node": "^9.6.2",
       "@types/passport-local": "^1.0.33",
@@ -40,10 +41,12 @@
       "typescript": "^2.8.1"
    },
    "dependencies": {
+      "bcrypt": "^2.0.0",
       "cors": "^2.8.4",
       "express": "^4.16.3",
       "mongoose": "^5.0.13",
       "morgan": "^1.9.0",
-      "passport-local": "^1.0.0"
+      "passport-local": "^1.0.0",
+      "uuid": "^3.2.1"
    }
 }
