--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
    "homepage": "https://github.com/gluaxspeed/cs554-yams#readme",
    "devDependencies": {
       "@types/bcrypt": "^1.0.0",
+      "@types/compression": "0.0.36",
       "@types/cors": "^2.8.3",
       "@types/express": "^4.11.1",
       "@types/mongoose": "^5.0.9",
@@ -43,10 +44,13 @@
    },
    "dependencies": {
       "bcrypt": "^2.0.0",
+      "compression": "^1.7.2",
       "cors": "^2.8.4",
       "express": "^4.16.3",
+      "express-validator": "^5.1.1",
       "mongoose": "^5.0.13",
       "morgan": "^1.9.0",
+      "passport": "^0.4.0",
       "passport-local": "^1.0.0",
       "passport-local-mongoose": "^5.0.0",
       "uuid": "^3.2.1"
