--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
    "description": "YAMS: Yet Another Messaging Service",
    "main": "index.js",
    "scripts": {
-      "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,yellow.bold\" \"npm run ts:watch\" \"npm run node:dev\"",
+      "dev":
+         "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,yellow.bold\" \"npm run ts:watch\" \"npm run node:dev\"",
       "node:dev": "nodemon dist/",
       "node:dist": "node dist/",
       "ts:build": "tsc",
@@ -32,6 +33,8 @@
       "@types/bcrypt": "^1.0.0",
       "@types/cors": "^2.8.3",
       "@types/express": "^4.11.1",
+      "@types/mongodb": "^3.0.18",
+      "@types/mongoose": "^5.0.12",
       "@types/morgan": "^1.7.35",
       "@types/node": "^9.6.2",
       "@types/passport-local": "^1.0.33",
